--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cra-template": "1.2.0",
     "customize-cra": "^1.0.0",
+    "normalize.css": "^8.0.1",
     "react": "^19.0.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^19.0.0",
@@ -35,6 +36,7 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-module-resolver": "^5.0.2"
+    "babel-plugin-module-resolver": "^5.0.2",
+    "sass": "^1.83.1"
   }
 }
