--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.5.1",
     "cra-template": "1.2.0",
     "customize-cra": "^1.0.0",
     "normalize.css": "^8.0.1",
@@ -10,7 +11,8 @@
     "react-app-rewired": "^2.2.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
